<resources>
    <string name="app_name">Perdidos y Encontrados</string>
    <string name="tabPerdidos">Perdidos</string>
    <string name="tabEncontrados">Encontrados</string>
    <string name="tabAdopcion">En Adopcion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtUsuario">Usuario 1</string>
    <string name="txtPublicacion1">Se busca dueño de la mascota xxxxxxxxx. Encontrado en la calle xxxx al yyyy. Actualmente esta resguardado en el domicilio xxxx altura yyyy. Dejo datos de contacto: Tel: xxx-xxxx-xxx</string>
    <string name="txtUsuario2">Usuario 2</string>
    <string name="txtPublicacion2">Se busca dueño de la mascota xxxxxxxxx. Encontrado en la calle xxxx al yyyy. Actualmente esta resguardado en el domicilio xxxx altura yyyy. Dejo datos de contacto: Tel: xxx-xxxx-xxx</string>
    <string name="btnAgregarPublicacion">Publicar</string>
    <string name="btnVerDetalle">Ver Detalle</string>
    <string name="txtSubirImagen">------Imagen Mascota------</string>
    <string name="txtUsuario1Adopcion">Usuario 10</string>
    <string name="txtPublicacionAdopcion">Se desea dar en adopcion a pequeña mascota rescatada de la calle. Los datos para contancto son los siguientes: Tel: yyy-yyyyyyy</string>
    <string name="txtUsuario2Adopcion">Usuario 11</string>
    <string name="txtUsuario3Adopcion">Usuario8</string>
    <string name="btnEditar">Editar</string>
    <string name="btnUsuario1Encontrado">Usuario 20</string>
    <string name="txtPublicacionEncontrado1">Se encontro mascota xxxx en la zona de yyyyyy. Dejo contacto personal para cualquier consulta: Tel: yyy-yyyyyyy</string>
</resources>