<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titulo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabPerdidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabPerdidos" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabEncontrados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabEncontrados" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabAdopcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabAdopcion" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager.widget.ViewPager>
</LinearLayout>