<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#FFFFFF"
    tools:context=".controller.Perdidos">

    <ScrollView
        android:id="@+id/svPerdidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp">

        <LinearLayout
            android:id="@+id/lyPrincipalPerdidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lyPublicacionesPerdidos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lyPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/lyDatos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/lyUsuario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imgUsuario1Perdidos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@android:drawable/star_big_on" />

                            <TextView
                                android:id="@+id/txtUsuario"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5sp"
                                android:paddingTop="5sp"
                                android:text="@string/txtUsuario"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageButton
                                android:id="@+id/imageButton"
                                android:layout_width="30sp"
                                android:layout_height="30sp"
                                android:layout_marginLeft="50sp"
                                android:layout_weight="1"
                                android:backgroundTint="#FFFFFF"
                                android:src="@android:drawable/ic_menu_edit" />

                            <ImageButton
                                android:id="@+id/imageButton2"
                                android:layout_width="30sp"
                                android:layout_height="30sp"
                                android:layout_marginLeft="10sp"
                                android:layout_weight="1"
                                android:backgroundTint="#FFFFFF"
                                android:src="@android:drawable/ic_menu_delete" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/txtPublicacion1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5sp"
                            android:paddingTop="10sp"
                            android:text="@string/txtPublicacion1"
                            android:textColor="#000000" />

                        <LinearLayout
                            android:id="@+id/lyImagenMascota1"
                            android:layout_width="match_parent"
                            android:layout_height="50sp"
                            android:background="#FFEAEA"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imgPerdido1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@android:drawable/ic_menu_gallery"
                                tools:srcCompat="@android:drawable/ic_menu_gallery" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/lyBtnOpciones"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btnVerDetalle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/btnVerDetalle" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:id="@+id/lyPublicacion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/lyDatos2Adopcion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/lyUsuario2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imgUsuario"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@android:drawable/ic_menu_myplaces" />

                            <TextView
                                android:id="@+id/txtUsuario2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5sp"
                                android:paddingTop="5sp"
                                android:text="@string/txtUsuario2"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageButton
                                android:id="@+id/btnEditar2"
                                android:layout_width="30sp"
                                android:layout_height="30sp"
                                android:layout_marginLeft="50sp"
                                android:backgroundTint="#FFFFFF"
                                android:src="@android:drawable/ic_menu_edit" />

                            <ImageButton
                                android:id="@+id/btnEliminar2"
                                android:layout_width="30sp"
                                android:layout_height="30sp"
                                android:layout_marginLeft="10sp"
                                android:backgroundTint="#FFFFFF"
                                android:src="@android:drawable/ic_menu_delete" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/txtPublicacion2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5sp"
                            android:paddingTop="10sp"
                            android:text="@string/txtPublicacion2"
                            android:textColor="#000000" />

                        <LinearLayout
                            android:id="@+id/lyImagenMascota"
                            android:layout_width="match_parent"
                            android:layout_height="50sp"
                            android:background="#FFDCDC"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imgPerdido2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:src="@android:drawable/ic_menu_gallery"
                                app:srcCompat="@mipmap/icon_original" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/lyBtnOpciones2Adopcion"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btnVerDetalle2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/btnVerDetalle" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="5sp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add" />

</FrameLayout>