<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.Encontrados">

    <ScrollView
        android:id="@+id/svEncontrados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp">

        <LinearLayout
            android:id="@+id/lyPrincipalEncontrados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lyPublicacionesEncontrados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lyPublicacion1Encontrado"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/lyDatos1Encontrado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/lyUsuario1Encontrado"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imgUsuario1Encontrados"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@android:drawable/btn_star_big_on" />

                            <TextView
                                android:id="@+id/txtUsuario1Encontrados"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/btnUsuario1Encontrado"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageButton
                                android:id="@+id/btnEditar1Encontrados"
                                android:layout_width="30sp"
                                android:layout_height="30sp"
                                android:layout_marginLeft="50sp"
                                android:backgroundTint="#FFFFFF"
                                android:src="@android:drawable/ic_menu_edit" />

                            <ImageButton
                                android:id="@+id/btnEliminar1Encontrados"
                                android:layout_width="30sp"
                                android:layout_height="30sp"
                                android:layout_marginLeft="10sp"
                                android:backgroundTint="#FFFFFF"
                                android:src="@android:drawable/ic_menu_delete" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/txtPublicacionEncontrado1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/txtPublicacionEncontrado1"
                            android:textColor="#000000" />

                        <LinearLayout
                            android:id="@+id/lyImagenMascota1Encontrado"
                            android:layout_width="match_parent"
                            android:layout_height="50sp"
                            android:background="#009688"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imgMascotaEncontrado1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:src="@android:drawable/ic_menu_gallery"
                                app:srcCompat="@mipmap/icon_original" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/lyBtnOpcionesEncontrados1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btnVerDatalleEncontrado1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/btnVerDetalle" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="5sp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add" />
</FrameLayout>